internal/gatewayapi/testdata/envoyproxy-tracing-sampler.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    telemetry:
      tracing:
        samplingRate: 100
        provider:
          backendRefs:
          - name: otel-collector
            namespace: monitoring
            port: 4317
          type: OpenTelemetry
          openTelemetry:
            sampler:
              type: ParentBasedTraceIdRatio
              samplingPercentage:
                numerator: 50
    provider:
      type: Kubernetes
      kubernetes:
        envoyDeployment:
          replicas: 2
          container:
            image: "envoyproxy/envoy:distroless-v1.39.0"
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
