internal/gatewayapi/testdata/envoyproxy-tracing-sampler.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: test
          namespace: envoy-gateway-system
        spec:
          logging: {}
          provider:
            kubernetes:
              envoyDeployment:
                container:
                  image: envoyproxy/envoy:distroless-dev
                replicas: 2
            type: Kubernetes
          telemetry:
            tracing:
              provider:
                backendRefs:
                - name: otel-collector
                  namespace: monitoring
                  port: 4317
                openTelemetry:
                  sampler:
                    samplingPercentage:
                      numerator: 50
                    type: ParentBasedTraceIdRatio
                type: OpenTelemetry
              samplingRate: 100
        status: {}
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    tracing:
      authority: otel-collector.monitoring.svc
      destination:
        metadata:
          kind: EnvoyProxy
          name: test
          namespace: envoy-gateway-system
        name: tracing
        settings:
        - addressType: IP
          endpoints:
          - host: 8.7.6.5
            port: 4317
          metadata:
            kind: Service
            name: otel-collector
            namespace: monitoring
            sectionName: "4317"
          name: tracing/backend/-1
          protocol: GRPC
      provider:
        backendRefs:
        - name: otel-collector
          namespace: monitoring
          port: 4317
        openTelemetry:
          sampler:
            samplingPercentage:
              numerator: 50
            type: ParentBasedTraceIdRatio
        port: 4317
        type: OpenTelemetry
      samplingRate: 100
      serviceName: gateway-1.envoy-gateway
